Fix dark mode card styles

--- a/assets/styles/_cards.scss
+++ b/assets/styles/_cards.scss
@@ -54,10 +54,6 @@ body[data-url="/community/contribute/"] .card-blog-brief h3 {
   font-size: 0.98rem;
 }
 
-[data-bs-theme="dark"] .card {
-  background-color: #171c1e !important;
-}
-
 .card-transactional-emails {
   background-image: url("/img/components/headers/transactional-emails.png") !important;
   background-size: contain !important;
